Rework TestRelPlanParser to use existing files
1. Avoid duplicating mostly identical content
2. Ensures that serialization deserialization is consistent and works